--- a/style.css
+++ b/style.css
@@ -972,7 +972,7 @@ footer h2{
 }
 .footer-container{
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 33% 33% auto;
     grid-column-gap: 2%;
 }
 .footer-left p{
@@ -1359,6 +1359,48 @@ footer h2{
         bottom: -2px;
         right: 40px;
     }
+    .about-img{
+        height: 260px; 
+    }
+    .about-text p{
+        font-size: 1em;
+    }
+    .back{
+        left: 20px; 
+    }
+    .about-img::before{
+        height: 260px;
+    }
+    .event-section{
+        width: 90%;
+        margin-left: -1%;
+    }
+    .event-grid{
+        display: grid;
+        grid-template-columns: auto;
+        margin: 50px 0 100px;
+    }
+    .event-title{
+        height: 300px;
+    }
+    .about-header{
+        display: grid;
+        grid-template-columns: 90%;
+        margin-left: -1%;
+    }
+    .about-text{
+        text-align: left;
+        margin-left: 50px; 
+        margin-top: 100px;
+        width: 90%;
+    }
+    .contact-form{
+        padding: 20px;
+        background-color: rgb(177, 177, 0);
+        margin-top: 150px;
+        position: relative;
+        width: 95%;
+    }
 }
 @media (max-width: 600px) {
 
@@ -1493,6 +1535,43 @@ footer h2{
         bottom: -2px;
         right: 20px;
     }
+    .event-title{
+        height: 200px;
+    }
+    .event-section{
+        width: 80%;
+        margin-left: -1%;
+    }
+    .event-info{
+        margin-left: -5%;
+        font-size: 0.8em;
+    }
+    .event-info span{
+        margin-left: 1%;
+    }
+    .testimonials{
+        width: 80%;
+        font-size: 15px;
+    }
+    .artists-grid{
+        display: grid;
+        grid-template-columns: 88%;
+    }
+    .artists-section{
+        margin-left: -1%;
+    }
+    .title-artists-left{
+        right: -50px;
+    }
+    .title-artists-right{
+        left: -20px;
+    }
+    .gallery-images{
+        height: 20px; 
+    }
+    .gallery-image{
+        height: 50px;
+    }
 }
 
 @media (max-width: 400px) {
@@ -1618,5 +1697,9 @@ footer h2{
         top: 20%;
         right: -60%;
         font-size: 0.8em;
+    }
+    .event-section{
+        width: 80%;
+        margin-left: -1%;
     }
 }
